syntax = "proto3";

package proto.event_api.v1;

message CreateEventRequest {
  string name = 1;
  int64 start_time = 2;
  int64 end_time = 3;
  double latitude = 4;
  double longitude = 5;
  string description = 6;
  string map_id = 7;
}

message CreateEventResponse {
  string id = 1;
}

message GetEventRequest {
  string id = 1;
}

message GetEventResponse {
  string id = 1;
  string name = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  double latitude = 5;
  double longitude = 6;
  string description = 7;
}

message GetAllEventsRequest {
  string parent_map_id = 1;
}

message GetAllEventsResponse {
  repeated GetEventResponse events = 1;
}

message UpdateEventRequest {
  string id = 1;
  string name = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  double latitude = 5;
  double longitude = 6;
  string description = 7;
}

message UpdateEventResponse {}

message DeleteEventRequest {
  string id = 1;
}

message DeleteEventResponse {}

service EventService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {}
  rpc GetEvent(GetEventRequest) returns (GetEventResponse) {}
  rpc GetAllEvents(GetAllEventsRequest) returns (GetAllEventsResponse) {}
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {}
  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse) {}
}